# lingmo-shell-surfaces

./: CMakeLists.txt  README.md
.github/workflows/: abi.yml  build.yml  package.yml  test.yml
.mimocode/: .cron-lock
cmake/: LingmoSanitizers.cmake  LingmoShellSurfacesConfig.cmake.in
debian/: changelog  control  copyright  liblingmoshellsurfaces-dev.install  liblingmoshellsurfaces1.install  qml-module-lingmo-shell.install  rules
include/LingmoShellSurfaces/: DesktopSurface.h  LingmoShellSurfaces.h  LingmoShellSurfacesExport.h.in  LingmoShellSurfacesVersion.h.in  OverviewSurface.h  PanelSurface.h  ShellSurface.h  Types.h  WindowManagerBackend.h
qml/: CMakeLists.txt
qml/Lingmo/Shell/: DesktopSurface.qml  LingmoShellPlugin.cpp  OverviewSurface.qml  PanelSurface.qml  qmldir
rpm/: lingmo-shell-surfaces.spec
src/: CMakeLists.txt  ShellSurface.cpp  Types.cpp
src/Desktop/: DesktopSurface.cpp
src/Overview/: OverviewSurface.cpp
src/Panel/: PanelSurface.cpp
src/Platform/: SurfaceBackend.cpp  SurfaceBackend.h
src/Platform/Generic/: GenericSurfaceBackend.cpp  GenericSurfaceBackend.h
src/Platform/Wayland/: LayerShellManager.cpp  LayerShellManager.h  LayerSurface.cpp  LayerSurface.h  WaylandSurfaceBackend.cpp  WaylandSurfaceBackend.h
src/Platform/Wayland/Protocol/: wlr-foreign-toplevel-management-unstable-v1.xml  wlr-layer-shell-unstable-v1.xml
src/Platform/X11/: X11SurfaceBackend.cpp  X11SurfaceBackend.h
src/WindowManager/: KWinBackend.cpp  KWinBackend.h  VirtualDesktopIntegration.cpp  VirtualDesktopIntegration.h  WindowManagerBackend.cpp  WindowManagerBackend.h
src/WindowManager/ForeignToplevel/: ForeignToplevelHandle.cpp  ForeignToplevelHandle.h  ForeignToplevelManager.cpp  ForeignToplevelManager.h
src/WindowManager/X11/: RealXcbInterface.cpp  RealXcbInterface.h  X11WindowBackend.cpp  X11WindowBackend.h  XcbInterface.h
src/private/: DesktopSurface_p.h  OverviewSurface_p.h  PanelSurface_p.h  ShellSurface_p.h
tests/: CMakeLists.txt  MockWindowManagerBackend.h  MockXcbInterface.h  tst_DesktopSurface.cpp  tst_LayerShell.cpp  tst_MockBackend.cpp  tst_OverviewSurface.cpp  tst_PanelSurface.cpp  tst_QmlImport.cpp  tst_ShellSurface.cpp  tst_SurfaceBackend.cpp  tst_WindowManagerBackend.cpp  tst_X11WindowBackend.cpp
